# Neko

./: CMakeLists.txt  ClassObject.h  ClassObject.hpp  Constructions.h  Constructions.hpp  Container.h  Container.hpp  FunctionObject.h  FunctionObject.hpp  NekoLib.h  NekoLib.hpp  Object.h  Object.hpp  OperationProcessing.hpp  README.md  Values.h  Values.hpp  Variable.h  VariableObject.h  VariableObject.hpp  exceptions.h  exceptions.hpp  execution.h  execution.hpp  expressions.h  expressions.hpp  helpers.h  helpers.hpp  interpreter.h  interpreter.hpp  keywords.h  keywords.hpp  main.cpp  token.h  token.hpp
UML Files/: sample.puml
